# TelemetriaV2.0

./: .gitignore  CLAUDE.md  README.md  README_TelemetriaV2.md  eracing_sessao_999.ld  eracing_sessao_999.ldx  main_antigo.rs  q!  test.md
Doc/: checklist_telemetria_v2_dia5.docx  (+5 more)
telemetry-edge/: CLAUDE.md  Cargo.toml  build.rs
telemetry-edge-mock/: CLAUDE.md  Cargo.toml
telemetry-edge-mock/assets/dbc/: ACD.dbc  INS.dbc
telemetry-edge-mock/src/: config.rs  main.rs  protocol.rs  runtime.rs  transport.rs  util.rs
telemetry-edge-mock/src/dbc/: mod.rs
telemetry-edge-mock/src/generators/: bms.rs  ins.rs  inversor.rs  mod.rs  vcu.rs
telemetry-edge-mock/src/scenarios/: braking.rs  cornering.rs  drive.rs  idle.rs  mod.rs  simple_enduro.rs  thermal.rs
telemetry-edge/src/: kvaser_fii.rs  main.rs
telemetry-server/: .env  .gitignore  CLAUDE.md  Cargo.toml  ComendosDB.md  DBC_WORKFLOW.md  RELATORIO_EXECUTIVO_DBC.md  docker-compose.yml  requirements.txt
telemetry-server/csv_data/: CAN Description 2025 - ACD.csv  CAN Description 2025 - BMS.csv  CAN Description 2025 - IMU.csv  CAN Description 2025 - LV_BMS.csv  CAN Description 2025 - PAINEL.csv  CAN Description 2025 - PT.csv  CAN Description 2025 - VCU.csv
telemetry-server/dbc_data/: EMUS-G1-BMS-DBC-v1_0_2.dbc  Inversor_Private.dbc  Inversor_Public.dbc  VCU.dbc  dbc_ins.dbc  id_can_bruto.txt
telemetry-server/mapa_bundle/: DOCUMENTACAO_COMPLETA.md  README.md  exportMapaFrontend.py  getTrajetoria.py  getVelocidade.py  mapaRegraNegocio.py  runPipelineMapa.py
telemetry-server/scripts/: can_coverage_scan.py
telemetry-server/src/: .env  api.rs  auth.rs  config.rs  db.rs  decoder.rs  ingest.rs  main.rs  main_antigo.rs  models.rs  ntp.rs  track_state.rs  ws.rs
telemetry-server/src/api/: admin.rs  auth_handlers.rs  can_map.rs  collection.rs  emergency.rs  http.rs  logs.rs  migrate.rs  mod.rs  requirements.txt
telemetry-server/static/: .gitignore  README.md  index.html  index.legacy.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
telemetry-server/static/docs/: backend-access-roles.md  backend-collection-timestamps.md  backend-downloads-and-roles-pending.md  backend-integration-guide.md  cockpit-feeds.md  downloads-and-roles-feature-plan.md  frontend-implementation.md  frontend-telemetry-decisions.md  gauge-offset.md  rpm-relative-history-plan.md  rust-dbc-migration-plan.md
telemetry-server/static/public/assets/: README.md
telemetry-server/static/scripts/: mock-telemetry-server.mjs  test-cockpit-map.mjs
telemetry-server/static/src/: App.jsx  index.css  index.jsx  store.js
telemetry-server/static/src/components/: Gauge.jsx  MotecChart.jsx  StatusBar.jsx  TabBar.jsx  TopBar.jsx
telemetry-server/static/src/components/AdminPage/: AdminPage.css  AdminPage.jsx
telemetry-server/static/src/components/BrandLogo/: BrandLogo.css  BrandLogo.jsx
telemetry-server/static/src/components/Cockpit/: Cockpit.css  Cockpit.jsx  CockpitGauge.jsx  LapTimePanel.jsx  RaceVideoPanel.jsx  TorqueDistribution.jsx  TrackMapPanel.jsx  trackMapMetrics.js
telemetry-server/static/src/components/DashboardEmptyState/: DashboardEmptyState.css  DashboardEmptyState.jsx
telemetry-server/static/src/components/Downloads/: DownloadFilters.jsx  DownloadLogTable.jsx  DownloadStatusBadge.jsx  DownloadsPage.css  DownloadsPage.jsx
telemetry-server/static/src/components/EmergencyButton/: EmergencyButton.css  EmergencyButton.jsx
telemetry-server/static/src/components/Gauge/: Gauge.css  Gauge.jsx  gaugeCanvas.js  gaugeUtils.js
telemetry-server/static/src/components/HistoryReferenceChart/: HistoryReferenceChart.css  HistoryReferenceChart.jsx  ReferenceRpmChart.jsx  WindowSignalChart.jsx  WindowStatsTable.jsx  historyUtils.js
telemetry-server/static/src/config/: brandConfig.js  dashboardConfig.js  serverConfig.js
telemetry-server/static/src/services/: logDownloads.js  telemetryCollection.js
telemetry-server/static/src/styles/: components.css
telemetry-server/static/src/utils/: auth.js  canDecode.js  chartHelpers.js  circularBuffer.js  logSessionMarks.js  lttb.js  permissions.js  signalClasses.js  signalGrouping.js  telemetryUtils.js
telemetry-server/static/src/workers/: worker.js
(+78 files in other folders)
